Convert print statements to python 3 function version

--- a/pyPyrTools/TUTORIALS/pyramids.ipynb
+++ b/pyPyrTools/TUTORIALS/pyramids.ipynb
@@ -709,7 +709,7 @@
    "source": [
     "# buildLpyr uses 5-tap filters by default for building Laplacian\n",
     "# pyramids.  You can specify other filters:\n",
-    "print ppt.namedFilter('binom3')\n",
+    "print(ppt.namedFilter('binom3')\n",
     "pyr3 = ppt.Lpyr(im, 7, 'binom3')\n",
     "pyr3.showPyr(disp='nb')\n",
     "fullres3 = pyr3.reconPyr('all','binom3')\n",
@@ -1892,7 +1892,7 @@
     "daub_hi = ppt.modulateFlip(daub_lo)\n",
     "# The daub_lo filter is constructed to be orthogonal to 2shifted\n",
     "# copy of itself.  For example:\n",
-    "print np.dot(np.concatenate((daub_lo,[[0],[0]])).T, np.concatenate(([[0],[0]],daub_lo)))\n",
+    "print(np.dot(np.concatenate((daub_lo,[[0],[0]])).T, np.concatenate(([[0],[0]],daub_lo)))\n",
     "\n",
     "M = np.concatenate((ppt.corrDn(image = np.identity(32), filt = daub_lo, edges = 'circular', step = (2, 1), start = (1, 0)),\n",
     "                    ppt.corrDn(image = np.identity(32), filt = daub_hi, edges = 'circular', step = (2, 1), start = (1, 0))))\n",
