Export functions from dll

--- a/pyPyrTools/TUTORIALS/pyramids.ipynb
+++ b/pyPyrTools/TUTORIALS/pyramids.ipynb
@@ -2364,7 +2364,7 @@
      "output_type": "stream",
      "text": [
       "/home/billbrod/Documents/pyPyrTools/pyPyrTools/steer2HarmMtx.py:59: VisibleDeprecationWarning: `rank` is deprecated; use the `ndim` attribute or function instead. To find the rank of a matrix see `numpy.linalg.matrix_rank`.\n",
-      "  r = numpy.rank(imtx)\n"
+      "  r = numpy.linalg.matrix_rank(imtx)\n"
      ]
     },
     {
